调整对象序列化反序列化实现